--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,44 @@
   text-align: center;
   font-family: "Poppins", sans-serif;
 }
+
 body {
   background-color: #7b081d;
 }
 
-h1 {
-  font-size: 2.5rem;
-  font-weight: 200;
-  color: white;
+
+#form {
+  margin-top : 6rem;
+}
+#form label {
+  color: #fff;
+  font-size: 2rem;
+  font-weight: 600;
 }
 
+#form input {
+  width: 85%;
+  padding: 1rem;
+  margin: 1rem 0;
+  border: none;
+  border-radius: 0.5rem;
+  font-size: 2rem;
+  font-weight: 400;
+  text-align: center;
+}
+
+
+#form button { 
+  padding: 1rem;
+  margin: 1rem 0;
+  border: none;
+  border-radius: 0.5rem;
+  font-size: 2rem;
+  font-weight: 600;
+  background-color: #fff;
+  color: #7b081da8;
+  
+}
 .loading-icon {
   width: 80px;
   filter: invert(100%);
@@ -25,6 +53,7 @@ footer a {
   font-weight: 200;
   position: absolute;
   bottom: 0;
+  left : 5px ;
   text-decoration: none;
 }
 
@@ -38,6 +67,33 @@ footer img {
   left: 5px;
   width: 40px;
   height: 40px;
+}
+
+@media (min-width: 768px) {
+  body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+  #form {
+    margin :0;
+    display: flex;
+    flex-direction: column;
+  }
+  #form label {
+    font-size: 3rem;
+  }
+  #form input {
+    align-self: center;
+    width: 50%;
+    font-size: 3rem;
+  }
+  #form button {
+    font-size: 3rem;
+    width: fit-content;
+    align-self: center;
+  }
 }
 
 @keyframes loading {
