--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,8 @@ body {
   background-color: #7b081d;
 }
 
-
 #form {
-  margin-top : 6rem;
+  margin-top: 6rem;
 }
 #form label {
   color: #fff;
@@ -28,7 +27,7 @@ body {
   text-align: center;
 }
 
-#form button { 
+#form button {
   padding: 1rem;
   margin: 1rem 0;
   border: none;
@@ -38,7 +37,6 @@ body {
   background-color: #fff;
   color: #7b081da8;
   cursor: pointer;
-  
 }
 .loading-icon {
   width: 80px;
@@ -50,7 +48,6 @@ footer {
   position: fixed;
   bottom: 0;
   width: 100%;
-
 }
 
 footer a {
@@ -60,7 +57,7 @@ footer a {
   font-weight: 200;
   position: absolute;
   bottom: 0;
-  left : 5px ;
+  left: 5px;
   text-decoration: none;
 }
 
@@ -81,17 +78,17 @@ ul {
   justify-content: center;
   align-items: center;
   list-style: none;
-  padding: 0  0 4rem 0;
+  padding: 0 0 4rem 0;
   margin: 0;
-  gap : 1rem;
+  gap: 1rem;
 }
-li{
-  color : white;
-  font-size : 1.5rem;
+li {
+  color: white;
+  font-size: 1.5rem;
 }
 
-.words-container{
-margin-bot : 3rem;
+.words-container {
+  margin-bot: 3rem;
 }
 @media (min-width: 768px) {
   body {
@@ -101,7 +98,7 @@ margin-bot : 3rem;
     height: 100vh;
   }
   #form {
-    margin :0;
+    margin: 0;
     display: flex;
     flex-direction: column;
   }
@@ -120,6 +117,14 @@ margin-bot : 3rem;
   }
 }
 
+.footerFontReduce {
+  animation: footerFontReduce 3s ease forwards;
+}
+
+.footerimageReduce {
+  animation: footerimageReduce 3s ease forwards;
+}
+
 @keyframes loading {
   0% {
     transform: rotate(0deg);
@@ -136,4 +141,25 @@ margin-bot : 3rem;
   to {
     opacity: 1;
   }
+}
+
+@keyframes footerFontReduce {
+  from {
+    font-size: 1rem;
+  }
+  to {
+    font-size: 0.8rem;
+  }
+}
+
+@keyframes footerimageReduce {
+  from {
+    width: 40px;
+    height: 40px;
+  }
+  to {
+    width: 30px;
+    height: 30px;
+  }
+  
 }
