--- a/src/App.css
+++ b/src/App.css
@@ -69,10 +69,9 @@ body {
 }
 
 footer {
-  height: 20px;
-  position: fixed;
-  right: 0;
-  bottom: 20px;
+  /* height: px; */
+  position: absolute;
+
   left: 35%;
 }
 
@@ -103,7 +102,7 @@ ul {
   justify-content: center;
   align-items: center;
   list-style: none;
-  padding: 0 0 4rem 0;
+  padding: 0 0 2rem 0;
   margin: 0;
   gap: 1rem;
 }
