--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,6 @@ body {
 }
 
 footer {
-  /* height: px; */
   position: absolute;
 
   left: 35%;
@@ -102,7 +101,7 @@ ul {
   justify-content: center;
   align-items: center;
   list-style: none;
-  padding: 0 0 2rem 0;
+  padding: 0 0 .5rem 0;
   margin: 0;
   gap: 1rem;
 }
