--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
 }
 
 body {
-  height: 100vh;
+  height: 50 advh;
   background-color: rgba(240, 52, 62, 1);
   background-image: linear-gradient(
     90deg,
@@ -51,11 +51,11 @@ body {
 }
 
 #form button {
-  padding: 1rem;
+  padding: .5rem 2rem .5rem 2rem;
   margin: 1rem 0;
   border: solid 2px white;
   border-radius: 0.5rem;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 600;
   background-color: transparent;
   color: white;
